third_party/rust/chromium_crates_io/vendor/toml_edit-0.22.22/tests/fixtures/invalid/integer/incomplete-oct.stderr
TOML parse error at line 1, column 20
  |
1 | incomplete-oct = 0o
  |                    ^
invalid octal integer
